src/tests/testfiles/binary-operators/types-27.txt
Error at 2:5: Logic operator operands must have the same type (have int rvalue and float rvalue)
0 || 0.4;
^
